# ZhoMind

./: .env.example  .gitignore  package-lock.json
backend/: alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 20260413_0001_initial_schema.py  20260414_0001_initial_schema.py  20260414_0002_retrieval_persistence.py
backend/scripts/: eval_runner.py  log_selfcheck.py
backend/src/api/: app.py  dependencies.py  errors.py  router.py
backend/src/api/routers/: __init__.py  auth.py  chat.py  document_jobs.py  documents.py  sessions.py
backend/src/application/: document_service.py  rag_service.py  retrieval_utils.py
backend/src/application/auth/: service.py
backend/src/application/chat/: service.py
backend/src/application/documents/: service.py
backend/src/application/interfaces/: queue.py  retrieval.py  storage.py
backend/src/domain/: enums.py
backend/src/domain/enums/: __init__.py
backend/src/shared/: exceptions.py  middleware.py  request_context.py  schemas.py
backend/tests/: eval_queries.jsonl  test_chat_rag_integration.py  test_chat_stability_boundaries.py  test_contract_blockers_regression.py  test_db_integration.py  test_documents_api_contract.py  test_documents_jobs_integration.py  test_eval_runner.py  test_foundation.py  test_observability_pipeline.py  test_qa_blockers_regression.py  test_rag_observability_regression.py  test_rag_quality_gate_regression.py  test_retrieval_index_sync.py  test_retrieval_tuning_config.py
backend/tests/api/: test_auth.py  test_chat.py  test_chat_stream.py  test_document_chunks.py  test_document_jobs.py  test_documents.py  test_sessions.py
backend/tests/integration/: test_retrieval_trace.py  test_schema.py
(+60 files in other folders)
